--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <h1>About Me</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
             </ul>
         </nav>
