Added titel and some css changes

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 
     <main>
         <section class="about-me">
+            <h1>Who am I?</h1>
             <h2>Biography</h2>
             <p>Hi! I’m Lenssa, I'd describe myself as a creative soul with an eye for details and design and enjoy working with projects where both design and technical problem-solving align. </p>
             <h3>Academic Interests</h3>
