Added some css code to the form

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 
     <main>
         <section>
+            <div class="contact-form">
             <h2>Get in contact with me!</h2>
             <form action="mailto:Lenssa33@gmail.com" method="get" enctype="text/plain">
                 <label for="name">Name:</label>
@@ -32,6 +33,7 @@
                 <textarea id="message" name="message" required></textarea><br><br>
                 <input type="submit" value="Send">
             </form>
+        </div>
         </section>
     </main>
 
