--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/lenssahkr" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
@@ -25,6 +26,8 @@
             <p>Hi! I’m Lenssa, I'd describe myself as a creative soul with an eye for details and design and enjoy working with projects where both design and technical problem-solving align. </p>
             <h3>Academic Interests</h3>
             <p>Currently, I’m close to finishing my studies in Informatics, and I aspire to work in web development, specializing in UX design and frontend development.</p>
+            <img src="img/Lund-University-Portfolio.jpg" alt="lund-university-logo" class="lund-university-logo">
+            <img src="img/web-development-portfolio.jpeg" alt="web-development" class="web-development">
             <h3>Hobbies</h3>
             <p>Beyond my career aspirations, I’d like to explore calligraphy, storytelling, and travel and culture (as probably most people). I’m also open to engaging in various creative projects that may arise in the future.</p>
             <h3>Future Goals</h3>
@@ -34,7 +37,7 @@
 
     <div class="about-footer">
     <footer>
-        <p>&copy; 2024 My Portfolio</p>
+        <p>&copy; 2024 by Lenssa Ebsa</p>
     </footer>
 </div>
 </body>
