--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/lenssahkr" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +40,7 @@
 
     <div class="contact-footer">
     <footer>
-        <p>&copy; 2024 My Portfolio</p>
+        <p>&copy; 2024 by Lenssa Ebsa</p>
     </footer>
 </div>
 </body>
