--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/lenssahkr" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +36,7 @@
 
     <footer>
         <div class="welcome-footer">
-        <p>&copy; 2024 My Portfolio</p>
+        <p>&copy; 2024 by Lenssa Ebsa</p>
     </div>
     </footer>
 </body>
