--- a/about.html
+++ b/about.html
@@ -23,21 +23,29 @@
         <section class="about-me">
             <h1>Who am I?</h1>
             <h2>Biography</h2>
-            <p>Hi! I’m Lenssa, I'd describe myself as a creative soul with an eye for details and design and enjoy working with projects where both design and technical problem-solving align. </p>
+            <p>Hi! I’m Lenssa, a 21-year-old student soon turning 22 on October 15. I'd describe myself as a creative soul with a passion for details and design. I love working on projects that bring together creativity and technical problem-solving. </p>
             <h3>Academic Interests</h3>
-            <p>Currently, I’m close to finishing my studies in Informatics, and I aspire to work in web development, specializing in UX design and frontend development.</p>
-            <img src="img/Lund-University-Portfolio.jpg" alt="lund-university-logo" class="lund-university-logo">
-            <img src="img/web-development-portfolio.jpeg" alt="web-development" class="web-development">
+            <p>I’m currently pursuing a degree in Information Systems (Informatics) at Lund University, and I'm close to finishing my studies. Over the course of my education, we've learned about various ways to assist companies in optimizing their business processes with the help of IT-systems. I also got introduced to some backend programming in Java and C#. But I've during my studies developed a strong interest in web development, particularly in UX design and frontend development. I enjoy learning about how to create intuitive interfaces. As I move forward in my studies, I’m seriously considering specializing in web development for my future career.</p>
+            <img src="img/Lund-University-Portfolio.jpg" alt="Picture of the Lund University logo" class="lund-university-logo">
+            <img src="img/web-development-portfolio.jpeg" alt="Picture of a person using a computer to code" class="web-development">
             <h3>Hobbies</h3>
-            <p>Beyond my career aspirations, I’d like to explore calligraphy, storytelling, and travel and culture (as probably most people). I’m also open to engaging in various creative projects that may arise in the future.</p>
+            <p>When I’m not studying or working on web projects, I have a few hobbies that keep me grounded. One of my favorite things to do, especially in the autumn as the weather gets cooler, is baking. Cheesecakes are my favourites. I’m also interested in learning more about calligraphy; That is something I used to do when I was younger that I want to get back into, I find the art of beautiful handwriting calming and inspiring.</p>
+            <img src="img/Blueberry-Cheesecake-Portfolio.jpeg" alt="Picture of a blueberry cheesecake" class="blueberry-cheesecake">
+            <img src="img/calligraphy-portfolio.jpeg" alt="Picture of a paper where the word calligraphy is written in cursive" class="calligraphy">
             <h3>Future Goals</h3>
-            <p>To create user-friendly interfaces for both web and mobile applications.</p>
+            <p>Career-wise, I aspire to possibly work in web development, for both web and mobile applications. Additionally, I would love to engage in a creative hobby project on the side. Outside of my career, I hope to travel more (as possibly most people). One of my long-term goals is to live abroad for a few years.</p>
+            <img src="img/travel-portfolio.jpeg" alt="Picture of a person looking out from an airport window" class="travel">
+
         </section>
     </main>
 
     <div class="about-footer">
     <footer>
         <p>&copy; 2024 by Lenssa Ebsa</p>
+        <ul class="footer-links"></ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+        </ul>
     </footer>
 </div>
 </body>
