--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,10 @@
     <div class="contact-footer">
     <footer>
         <p>&copy; 2024 by Lenssa Ebsa</p>
+        <ul class="footer-links"></ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+        </ul>
     </footer>
 </div>
 </body>
