--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="welcome-image">
-    <img src="img/portfolio_picture.jpg" alt="A picture of me" class="welcome-me">
+    <img src="img/portfolio_picture.jpg" alt="A smiling picture of me" class="welcome-me">
 
 </div>
 
@@ -37,6 +37,10 @@
     <footer>
         <div class="welcome-footer">
         <p>&copy; 2024 by Lenssa Ebsa</p>
+        <ul class="footer-links"></ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+        </ul>
     </div>
     </footer>
 </body>
